--- a/schedule.html
+++ b/schedule.html
@@ -264,7 +264,7 @@
                                         </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Save</button>
+                                                <button type="button" class="btn btn-primary" id="#add-client">Save</button>
                                             </div>
                                         
                                     </div>
