--- a/client_rec.html
+++ b/client_rec.html
@@ -36,6 +36,9 @@
                     <a class="nav-link text-white" href="client_rec.html"><i><ion-icon name="folder-outline"></ion-icon></i>Client Records Table</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-white" href="history.html"><i><ion-icon name="file-tray-full-outline"></ion-icon></i>Client History</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-white" href="schedule.html"><i><ion-icon name="calendar-outline"></ion-icon></i>Schedule</a>
                 </li>
                 
@@ -47,6 +50,7 @@
         <!-- Main Content -->
         <div class="main-content container-fluid">
             <div class="row navbar-light bg-white">
+                <div class = "card1">
                 <div class="col-12">
                     <nav class="navbar1 border-bottom d-flex justify-content-start">
                         <h4 class="my-2">Client Records Table <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#add-record" data-bs-whatever="@mdo" ><ion-icon name="add-outline"></ion-icon></button></h4>
@@ -66,7 +70,7 @@
                     </div>
                 </div>
             
-                    <table class="table table-bordered">
+                    <table class="table table-bordered"> 
                         <thead>
                             <tr>
                                 <th>Client ID</th>
