--- a/schedule.html
+++ b/schedule.html
@@ -179,35 +179,35 @@
                                 <div class="modal-body">
                                     <form>
                                         <div class="mb-3">
-                                            <label for="Client-ID" class="col-form-label">Client ID:</label>
-                                            <input type="text" class="form-control" id="Client-ID">
+                                            <label for="edit-client-id" class="col-form-label">Client ID:</label>
+                                            <input type="text" class="form-control" id="edit-client-id">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="Client-Name" class="col-form-label">Client Name:</label>
-                                            <input type="text" class="form-control" id="Client-Name">
+                                            <label for="edit-client-name" class="col-form-label">Client Name:</label>
+                                            <input type="text" class="form-control" id="edit-client-name">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="Aesthetician" class="col-form-label">Aesthetician:</label>
-                                            <input type="text" class="form-control" id="Aesthetician">
+                                            <label for="edit-aesthetician" class="col-form-label">Aesthetician:</label>
+                                            <input type="text" class="form-control" id="edit-aesthetician">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="Treatment" class="col-form-label">Treatment:</label>
-                                            <input type="text" class="form-control" id="Treatment">
+                                            <label for="edit-treatment" class="col-form-label">Treatment:</label>
+                                            <input type="text" class="form-control" id="edit-treatment">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="date" class="col-form-label">Date:</label>
-                                            <input type="date" class="form-control" id="date">
+                                            <label for="edit-date" class="col-form-label">Date:</label>
+                                            <input type="date" class="form-control" id="edit-date">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="time" class="col-form-label">Time:</label>
-                                            <input type="time" class="form-control" id="time">
+                                            <label for="edit-time" class="col-form-label">Time:</label>
+                                            <input type="time" class="form-control" id="edit-time">
                                         </div>
                                         
                                     </form>
                                 </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary">Save Changes</button>
+                                        <button id="save-schedule-btn" class="btn btn-primary" id="save-changes">Save</button>
                                     </div>
                             </div>
                             </div>
@@ -238,30 +238,30 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <form>
+                                            <form id="add-schedule-form">
                                                 <div class="mb-3">
-                                                    <label for="Client-ID" class="col-form-label">Client ID:</label>
-                                                    <input type="text" class="form-control" id="client-ID">
+                                                    <label for="add-client-id" class="col-form-label">Client ID:</label>
+                                                    <input type="text" class="form-control" id="add-client-id">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="Client-Name" class="col-form-label">Client Name:</label>
-                                                    <input type="text" class="form-control" id="client-Name">
+                                                    <label for="add-client-name" class="col-form-label">Client Name:</label>
+                                                    <input type="text" class="form-control" id="add-client-name">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="Aesthetician" class="col-form-label">Aesthetician:</label>
-                                                    <input type="text" class="form-control" id="aesthetician">
+                                                    <label for="add-aesthetician" class="col-form-label">Aesthetician:</label>
+                                                    <input type="text" class="form-control" id="add-aesthetician">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="Treatment" class="col-form-label">Treatment:</label>
-                                                    <input type="text" class="form-control" id="treatment">
+                                                    <label for="add-treatment" class="col-form-label">Treatment:</label>
+                                                    <input type="text" class="form-control" id="add-treatment">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="date" class="col-form-label">Date:</label>
-                                                    <input type="date" class="form-control" id="date">
+                                                    <label for="add-date" class="col-form-label">Date:</label>
+                                                    <input type="date" class="form-control" id="add-date">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="time" class="col-form-label">Time:</label>
-                                                    <input type="time" class="form-control" id="time">
+                                                    <label for="add-time" class="col-form-label">Time:</label>
+                                                    <input type="time" class="form-control" id="add-time">
                                                 </div>
                                             </form>
                                         </div>
