--- a/history.html
+++ b/history.html
@@ -152,43 +152,6 @@
                         </tbody>
                     </table>
 
-
-                        <div class="modal fade" id="add-history" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Add History</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                <form id="edit-client-form">
-                                    
-                                    <div class="mb-3">
-                                        <label for="name" class="col-form-label">Name:</label>
-                                        <input type="text" class="form-control" id="name">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="Treatment" class="col-form-label">Treatment:</label>
-                                        <input type="text" class="form-control" id="Treatment">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="Aesthetician" class="col-form-label">Aesthetician:</label>
-                                        <input type="text" class="form-control" id="Aesthetician">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="date-added" class="col-form-label">Date Added:</label>
-                                        <input type="date" class="form-control" id="date-added">
-                                    </div>
-                                </form>
-                                </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary">Save</button>
-                                    </div>
-                            </div>
-                            </div>
-                        </div>
-
                             <div class="modal fade" id="delete" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
                                   <div class="modal-content">
@@ -217,27 +180,26 @@
                                         <div class="modal-body">
                                             <form id="add-history-form">
                                                 <div class="mb-3">
-                                                    <label for="client-id" class="col-form-label">Client ID:</label>
-                                                    <input type="text" class="form-control" id="client-id">
+                                                    <label for="client-name" class="col-form-label">Client Name:</label>
+                                                    <input type="text" class="form-control" id="client-name">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="name" class="col-form-label">Name:</label>
-                                                    <input type="text" class="form-control" id="name">
+                                                    <label for="treatment" class="col-form-label">Treatment:</label>
+                                                    <input type="text" class="form-control" id="treatment">
                                                 </div>
                                                 <div class="mb-3">
-                                                    <label for="Treatment" class="col-form-label">Treatment:</label>
-                                                    <input type="text" class="form-control" id="Treatment">
-                                                </div>
-                                                <div class="mb-3">
-                                                    <label for="Aesthetician" class="col-form-label">Aesthetician:</label>
-                                                    <input type="text" class="form-control" id="Aesthetician">
+                                                    <label for="aesthetician" class="col-form-label">Aesthetician:</label>
+                                                    <input type="text" class="form-control" id="aesthetician">
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="date-added" class="col-form-label">Date Added:</label>
                                                     <input type="date" class="form-control" id="date-added">
                                                 </div>
                                             </form>                                       
-                                            
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-primary" id="save-history">Save</button>
+                                            </div>
                                         </div>                                         
                                     </div>
                                     </div>
@@ -249,6 +211,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <script src="clientrec.js"></script>
+        <script src="clienthistory.js"></script>
     </body>
     </html>
