--- a/client_rec.html
+++ b/client_rec.html
@@ -192,39 +192,39 @@
                                 <div class="modal-body">
                                 <form id="edit-client-form">
                                     <div class="mb-3">
-                                        <label for="client-id" class="col-form-label">Client ID:</label>
-                                        <input type="text" class="form-control" id="edit-client-id">
+                                        <label for="edit-client-id" class="col-form-label">Client ID:</label>
+                                        <input type="text" class="form-control" id="edit-client-id" readonly>
                                     </div>
                                     <div class="mb-3">
-                                        <label for="last-name" class="col-form-label">Last Name:</label>
+                                        <label for="edit-lastname" class="col-form-label">Last Name:</label>
                                         <input type="text" class="form-control" id="edit-lastname">
                                     </div>
                                     <div class="mb-3">
-                                        <label for="first-name" class="col-form-label">First Name:</label>
+                                        <label for="edit-firstname" class="col-form-label">First Name:</label>
                                         <input type="text" class="form-control" id="edit-firstname">
                                     </div>
                                     <div class="mb-3">
-                                        <label for="middle-name" class="col-form-label">Middle Name:</label>
-                                        <input type="text" class="form-control" id="middle-name">
+                                        <label for="edit-middlename" class="col-form-label">Middle Name:</label>
+                                        <input type="text" class="form-control" id="edit-middlename">
                                     </div>
                                     <div class="mb-3">
-                                        <label for="Gender" class="col-form-label">Gender:</label>
-                                        <select class="form-control" id="Gender">
+                                        <label for="edit-gender" class="col-form-label">Gender:</label>
+                                        <select class="form-control" id="edit-gender">
                                         <option>Male</option>
                                         <option>Female</option>
                                         </select>
                                     </div>
                                     <div class="mb-3">
-                                        <label for="age" class="col-form-label">Age:</label>
-                                        <input type="number" class="form-control" id="age">
+                                        <label for="edit-age" class="col-form-label">Age:</label>
+                                        <input type="number" class="form-control" id="edit-age">
                                     </div>
                                     <div class="mb-3">
-                                        <label for="Contact No" class="col-form-label">Contact No.:</label>
-                                        <input type="text" class="form-control" id="Contact No">
+                                        <label for="edit-contact" class="col-form-label">Contact No.:</label>
+                                        <input type="text" class="form-control" id="edit-contact">
                                     </div>
                                     <div class="mb-3">
-                                        <label for="date-added" class="col-form-label">Date Added:</label>
-                                        <input type="date" class="form-control" id="date-added">
+                                        <label for="edit-date-added" class="col-form-label">Date Added:</label>
+                                        <input type="date" class="form-control" id="edit-date-added">
                                     </div>
                                 </form>
                                 </div>
@@ -262,7 +262,7 @@
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="edit-middle-name" class="col-form-label">Middle Name:</label>
-                                                    <input type="text" class="form-control" id="edit-middle-name">
+                                                    <input type="text" class="form-control" id="edit-middlename">
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="edit-gender" class="col-form-label">Gender:</label>
