--- a/schedule.html
+++ b/schedule.html
@@ -207,7 +207,7 @@
                                 </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <button id="save-schedule-btn" class="btn btn-primary" id="save-changes">Save</button>
+                                        <button id="save-schedule-btn" class="btn btn-primary">Save</button>
                                     </div>
                             </div>
                             </div>
